/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-11-11 23:06 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + build/openssl/patch-00
    ! for macOS, no "ranlib -c" in Zig, patch to "ranlib"

2025-11-11 22:34 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + build/zig-binary/Makefile
    * update macOS zig binary early, CommonCryptoHeaders missing
      from previous release

2025-11-11 21:49 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/macos.yml
    ! extra macOS include path for ./configure

2025-11-11 20:59 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * build/libpq-inherit/Makefile
  + build/libpq-inherit/pkgver.sh
    ! switched from sed to awk for retrieving libpq PACKAGE_VERSION,
      sed call was unhappy on macOS, moved to pkgver.sh
    * split out lib and bin paths

2025-11-11 18:39 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/ubuntu-arm64.yml
    * another try about previous one

  * build/duckdb-binary/Makefile
    ! linux DuckDB binaries end on libs, no other bins

2025-11-11 15:56 UTC+0100 Aleksander Czajczynski (hb fki.pl) [corebuild]
  * .github/workflows/ubuntu-arm64.yml
    * OpenSSL build system ignores CC= nor there's linux-aarch64-clang
      on this platform

2025-11-11 15:08 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * build/openssl/Makefile
    + added $HBPK_CC_FAMILY before make, before ./configure
      it was not enough, build progressed with gcc on Linux.

2025-11-11 14:18 UTC+0100 Aleksander Czajczynski (hb fki.pl) [corebuild]
  * .github/workflows/windows-arm64.yml
  + build/zig-binary/windres-rc
    + added windres-rc wrapper, borrowed from vcpkg due to
      no windres available on MSYS2 CLANGARM64. Actually
      you could borrow MINGW64 package executing non native...
      but hey.
