@@ -53,6 +53,7 @@ jobs:
       run: |
         export HBPK_WORKDIR=$HOME/hbpk
         export PATH="$HBPK_WORKDIR/bin:$PATH"
+        rm -rf hbpksrc/packages
         cd hbpksrc/base
         mv xz xz-old
         mv xz-current xz
@@ -84,7 +85,7 @@ jobs:
           cd ..
           PKGSELECTION=harbour-core-onedir make install
         fi
-        HBPK_OPENSSL_OPTS="no-tests no-apps no-shared" \
+        HBPK_OPENSSL_OPTS="no-tests no-apps" \
         PKGSELECTION=" \
           letodbf-server-elch \
           letodbf-server-alcz \
@@ -93,19 +94,40 @@ jobs:
           harbour-yaml \
           libpq-inherit \
           harbour-pgsql \
-          openssl \
-          libssh2 \
-          libcotp \
-          libduckdb-binary \
-          hbduckdb-wensheng \
-          hbotp-naldodj \
-          hbssh2-alkresin \
           " \
         make install
 
     - name: Run tests
       run: |
          $HOME/hbpk/harbour/bin/darwin/zig/hbtest
+
+    - name: Build packages depending on OpenSSL
+      continue-on-error: true
+      run: |
+        export PATH="$HBPK_WORKDIR/bin:$HBPK_WORKDIR/harbour/bin/darwin/zig:$PATH"
+        if [ -d "packages-aarch64-macos" ]; then
+          mv packages-aarch64-macos-last/openssl*.hbpk hbpksrc/packages/
+          cd hbpksrc/packages
+          hbpk-add zlib*.hbpk
+          hbpk-add cmake*.hbpk
+          hbpk-add openssl*.hbpk
+          cd ../build
+        else
+          cd hbpksrc/build
+          PKGSELECTION="zlib cmake-binary" make install
+          # OpenSSL build-conf is really tied to XCode, few patches is not enough to build it with Zig
+          hbpk-del zig # hide Zig's "clang" for a while
+          HBPK_OPENSSL_OPTS="no-tests no-apps no-shared" PKGSELECTION="openssl" make install
+          hbpk-add ../packages/zig*.hbpk
+        fi
+        OPENSSL_ROOT_DIR="/opt/hbpk" \
+        PKGSELECTION=" \
+          libcotp \
+          hbotp-naldodj \
+          libssh2 \
+          hbssh2-alkresin \
+          " \
+        make install
 
     - name: Rename artifacts
       run: |
